--- a/src/pages/portfolio/portfolioDetailed.css
+++ b/src/pages/portfolio/portfolioDetailed.css
@@ -24,21 +24,22 @@
 
 .portfolio-hero-overlay {
   position: absolute;
-  top: 50%;
-  left: 15%;
-  transform: translateY(-50%);
+  bottom: 20px;
+  left: 20px;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent);
   color: #ffffff;
   z-index: 2;
+  border-radius: 0 0 12px 12px;
 }
 
 .portfolio-title {
-  font-size: 3.5rem;
+  font-size: 3.1rem;
   font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .portfolio-subtitle {
   font-size: 1.3rem;
-  margin-top: 10px;
   color: #cfd9e0;
 }
 
@@ -75,7 +76,6 @@
 .zigzag-text h2 {
   font-size: 2rem;
   color: var(--secondary);
-  /* border-left: 4px solid #9af705b4; */
   padding-left: 12px;
   margin-bottom: 18px;
   font-weight: 600;
@@ -103,7 +103,7 @@
 
 .zigzag-image img {
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   object-fit: cover;
   border-radius: 16px;
   transition: transform 0.4s ease;
