--- a/src/components/home/Portfolio.css
+++ b/src/components/home/Portfolio.css
@@ -21,7 +21,6 @@
   border-radius: 16px;
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
-  margin-bottom: 80px;
 }
 
 .featured-image {
@@ -41,25 +40,17 @@
   bottom: 20px;
   left: 20px;
   text-align: left;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent);
   padding: 12px;
   border-radius: 0 0 12px 12px;
-}
-
-.featured-overlay h3 {
-  font-size: 2rem;
-  margin: 0;
-  /* color: var(--secondary); */
 }
 
 .featured-overlay p {
   font-size: 1.1rem;
   margin: 5px 0 15px;
 }
-
+/* Button */
 .view-btn {
-  background-color: #ffb703;
-  /* background-color: var(--secondary); */
+  background-color: var(--secondary);
   color: #0d0d0d;
   border: none;
   padding: 10px 20px;
@@ -70,19 +61,23 @@
 }
 
 .view-btn:hover {
-  background-color: #ffd166;
+  background-color: #fffec6c8;
 }
 
 .card-overlay {
   position: absolute;
-  bottom: 15px;
-  left: 15px;
-  right: 15px;
+  bottom: 0;
+  left: 0;
+  right: 0;
   color: #fff;
   text-align: left;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent);
-  padding: 12px;
-  border-radius: 0 0 12px 12px;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.25));
+  padding: 16px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(4px);
+  z-index: 2;
 }
 
 .card-overlay h4 {
@@ -143,6 +138,9 @@
 }
 
 @media (max-width: 768px) {
+  .scroll-card:active .card-overlay {
+    background: rgba(0, 0, 0, 0.7);
+  }
   .swipe-indicator {
     display: block;
   }
