--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 50px;
+  padding: 0 15px;
   /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); */
 }
 
@@ -21,7 +21,7 @@
   color: var(--text-light);
   text-decoration: none;
   font-size: 1rem;
-  transition: color 0.3 ease;
+  transition: color 0.3s ease;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
 }
 .nav a:hover {
@@ -35,7 +35,7 @@
   border-radius: 20px;
   font-weight: 600;
   cursor: pointer;
-  transition: all 0.3 ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .quote-btn:hover {
   background-color: #ababb8;
@@ -64,12 +64,12 @@
   height: 30px;
   width: 30px;
   z-index: 11;
-  transition: transform 0.3 ease;
+  transition: transform 0.3s ease;
 }
 .hamburger span {
   width: 25px;
   height: 3px;
-  background: #fff;
+  background: var(--text-light);
   transition: all 0.4s ease-in-out;
   border-radius: 2px;
 }
@@ -83,11 +83,7 @@
 .hamburger.open span:nth-child(3) {
   transform: rotate(-45deg) translate(5px, -5px);
 }
-.nav {
-  display: flex;
-  align-items: center;
-  gap: 25px;
-}
+
 /* Mobile Styles */
 @media (max-width: 768px) {
   .nav {
@@ -95,11 +91,12 @@
     top: 70px;
     right: 0;
     width: 100%;
-    background: rgba(0, 0, 0, 0.95);
+    background: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(8px);
     flex-direction: column;
     padding: 20px 0;
     display: none;
-
+    pointer-events: none;
     transform: translateY(-20px);
     opacity: 0;
     transition: all 0.3s ease-in-out;
@@ -109,6 +106,7 @@
     display: flex;
     transform: translateY(0);
     opacity: 1;
+    pointer-events: auto;
   }
 
   .hamburger {
@@ -119,12 +117,4 @@
   .quote-btn {
     margin-top: 10px;
   }
-}
-
-.header {
-  padding: 0 15px; /* reduced padding for mobile */
-}
-
-.logo-container {
-  margin-left: 5px; /* pushes logo slightly more to the left */
 }
